--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,4 +6,4 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/typography.css">
+<link rel="stylesheet" href="/css/style.css">
