Adding note to new & edit location views

--- a/views/locations/edit.ejs
+++ b/views/locations/edit.ejs
@@ -13,6 +13,9 @@
 			    <input type="text" name="zip" placeholder="New Zip Code">
 			    <button type="submit">Submit</button>
 		    </form>
+		    <div>
+		    	<p>*US 5-digit zip codes only!</p>
+		    </div>
 		    <br>
 		  </div>
 		</div>
