--- a/views/locations/new.ejs
+++ b/views/locations/new.ejs
@@ -10,9 +10,12 @@
 			<div class="container">
 				<h1>Add Location</h1>
 				<form action="/locations" method="POST">
-			    <input type="text" name="zip" placeholder="Zip Code">
+			    <input type="text" name="zip" placeholder="Zip Code*">
 			    <button type="submit">Submit</button>
 		    </form>
+		    <div>
+		    	<p>*US 5-digit zip codes only!</p>
+		    </div>
 		    <br>
 		  </div>
 		</div>
